[package]
name = "kvlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1.0.137"
log = "0.4.17"
serde_derive = "1.0.137"
pretty_env_logger = "0.4.0"
